--- a/index.html
+++ b/index.html
@@ -44,18 +44,20 @@
      HEADER / HERO
      Cambia aquí el texto principal
 ========================= -->
-<header class="hero">
-
-
-
-  <div class="hero-text">
-    <!-- ✏️ Cambiar texto principal aquí -->
-    <h1>Amor por la Tierra <span>Nuestra raíz</span></h1>
-    <p>El poder del olivo en tu hogar</p>
-    <a href="#" class="btn-whatsapp">Comprar por WhatsApp</a>
-  </div>
-
+<header>
+  <nav class="navbar">
+      <!-- Logo + botones -->
+  </nav>
 </header>
+
+<section class="hero">
+   <div class="hero-text">
+       <h1>Amor por la Tierra</h1>
+       <p>El poder del olivo en tu hogar</p>
+       <a href="#" class="btn-whatsapp">Comprar por WhatsApp</a>
+   </div>
+</section>
+
 
 
 <!-- =========================
@@ -165,3 +167,4 @@
 
 </body>
 </html>
+
