--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OLIBU Natural - Bienestar natural desde el origen</title>
-    
+    <link rel="icon" type="image/png" href="img/logo.png">
+
     <!-- FUENTES -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Playfair+Display:wght@600&display=swap" relstylesheet>
     
@@ -108,4 +109,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
