--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <nav>
             <ul>
                 <li><a href="#productos">Productos</a></li>
-                <li><a href="#nosotros">Nosotros</a></li>
+                <li><a href="#video-olibu">Nosotros</a></li>
                 <li><a href="#beneficios">Beneficios</a></li>
                 <li><a href="#contacto">Contacto</a></li>
             </ul>
@@ -71,7 +71,7 @@
     </section>
 
   <!-- VIDEO OLIBU -->  
-<section class="video-section">
+<section id="video-olibu" class="video-section">
     <div class="container">
         <h2 class="titulo-video">Conoce Nuestro Proceso</h2>
 
@@ -143,6 +143,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
