--- a/index.html
+++ b/index.html
@@ -3,15 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OLIBU Natural - Bienestar natural desde el origen</title>
+
+    <title>Olibu | Aceite de Oliva Premium en Perú</title>
+
+    <meta name="description" content="Compra aceite de oliva premium en Olibu. Productos naturales, calidad garantizada y envíos a todo Perú.">
+    <meta name="keywords" content="aceite de oliva, aceite de oliva Perú, aceite premium, olibu, aceite natural">
+    <meta name="author" content="Olibu">
+
+    <!-- Open Graph (para cuando compartes en redes) -->
+    <meta property="og:title" content="Olibu | Aceite de Oliva Premium en Perú">
+    <meta property="og:description" content="Aceite de oliva premium con envíos a todo Perú. Calidad y sabor garantizados.">
+    <meta property="og:image" content="https://olibu.com.pe/img/logo.png">
+    <meta property="og:url" content="https://olibu.com.pe">
+    <meta property="og:type" content="website">
+
+    <!-- Favicon -->
     <link rel="icon" type="image/png" href="img/logo.png">
 
-    <!-- FUENTES -->
+    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
-    
+
     <!-- CSS -->
     <link rel="stylesheet" href="styles.css">
 </head>
+
 
 
 <body>
@@ -170,6 +185,7 @@
 
 </body>
 </html>
+
 
 
 
