--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <meta property="og:type" content="website">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/img/logo.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/img/logo.png">
-    <link rel="apple-touch-icon" href="/img/logo.png">
+<link rel="icon" type="image/png" sizes="48x48" href="https://olibu.com.pe/img/logo.png">
+<link rel="apple-touch-icon" href="https://olibu.com.pe/img/logo.png">
+
 
 
     <!-- Google Fonts -->
@@ -187,6 +187,7 @@
 
 </body>
 </html>
+
 
 
 
